# rust_opengl

./: Cargo.toml  build.rs
assets/shaders/: triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: main.rs  resources.rs
src/render_gl/: data.rs  mod.rs  shader.rs
